Prototype the auth system

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
                     <li><a href="#" class="text-white">Follow on Twitter</a></li>
                     <li><a href="#" class="text-white">Like on Facebook</a></li>
                     <li><a href="#" class="text-white">Email me</a></li>
+                      <li><a href="{% url 'logout' %}?next=/" class="text-white">Logout</a></li>
                   </ul>
                 </div>
               </div>
